--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,10 @@
         "psr-4": {
             "Alura\\BuscadorDeCursos\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.1",
+        "squizlabs/php_codesniffer": "^3.4",
+        "phan/phan": "^1.3"
     }
 }
